styled slider to reflect theme

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,15 +37,19 @@
             <!-- Introduction container -->
             <div class="mt-10">
               <!-- <button id="toggleDarkMode">Toggle Dark Mode</button> -->
-              <p>Switch theme</p>
-              <button id="btn-toggle-container" class="flex w-100 shadow-[inset_0_-2px_4px_rgba(0,0,0,0.6)] bg-indigo-800 dark:bg-white text-white dark:text-black rounded-md justify-center content-center p-2">
-                <div id="light-icon" class="hidden">
-                  <span class="material-symbols-outlined flex justify-center"> wb_sunny </span>
-                </div>
-                <div id="dark-icon">
-                  <span class="material-symbols-outlined flex justify-center"> dark_mode </span>
-                </div>
-              </button>
+              <label class="switch">
+                <input type="checkbox" id="btn-toggle-container" />
+                <span class="light-dark-slider">
+                  <div id="icon-container" class="hidden">
+                    <span
+                      class="material-symbols-outlined flex justify-center"
+                      id="switch-icon"
+                      >dark_mode</span
+                    >
+                  </div>
+                </span>
+              </label>
+
               <h1 class="text-4xl font-bold">Hi, I'm Adam.</h1>
 
               <span id="intro-container" class="inline">
