--- a/src/html/index.html
+++ b/src/html/index.html
@@ -44,7 +44,7 @@
                     <span
                       class="material-symbols-outlined flex justify-center"
                       id="switch-icon"
-                      >dark_mode</span
+                      >wb_sunny</span
                     >
                   </div>
                 </span>
