--- a/src/html/index.html
+++ b/src/html/index.html
@@ -31,7 +31,7 @@
       >
         <!-- Thanos button starts -->
 
-        <button id="thanos-button" class="snap-button">Snap!</button>
+        <!-- <button id="thanos-button" class="snap-button">Snap!</button> -->
 
         <!-- Thanos button ends -->
         <div id="welcome-spacer" class="w-fit">
