added outline for capture content function

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,6 +34,7 @@
         <!-- <button id="thanos-button" class="snap-button">Snap!</button> -->
 
         <!-- Thanos button ends -->
+        <div style="height: 30px; width: 30px; background-color: black;" class="snap"></div>
         <div id="welcome-spacer" class="w-fit">
           <div
             id="introduction"
