changed to CDN for html2canvas

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,6 +16,8 @@
       rel="stylesheet"
     />
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.js" integrity="sha512-sn/GHTj+FCxK5wam7k9w4gPPm6zss4Zwl/X9wgrvGMFbnedR8lTUSLdsolDRBRzsX6N+YgG6OWyvn9qaFVXH9w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
     <script type="module" src="../js/config.js"></script>
     <script type="module" src="../js/script.mjs" defer></script>
@@ -31,12 +33,12 @@
       >
         <!-- Thanos button starts -->
 
-        <!-- <button id="thanos-button" class="snap-button">Snap!</button> -->
+        <button id="thanos-button" class="snap-button">Snap!</button>
 
         <!-- Thanos button ends -->
         <div style="height: 30px; width: 30px; background-color: black;" class="snap"></div>
 
-        
+
         <div id="welcome-spacer" class="w-fit">
           <div
             id="introduction"
