--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link href="../css/output.css" rel="stylesheet" />
+    <link href="./output.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,8 +23,8 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
-    <script type="module" src="../js/config.js"></script>
-    <script type="module" src="../js/script.mjs" defer></script>
+    <script type="module" src="./js/config.js"></script>
+    <script type="module" src="./script.mjs" defer></script>
   </head>
   <body class="bg-white dark:bg-[rgb(32, 32, 77)] text-black dark:text-white">
     <div
