--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
-    <script type="module" src="./js/config.js"></script>
+    <script type="module" src="./config.js"></script>
     <script type="module" src="./script.mjs" defer></script>
   </head>
   <body class="bg-white dark:bg-[rgb(32, 32, 77)] text-black dark:text-white">
